kubernetes/darkstar/apps/kube-system/cilium/app/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: hubble-ui
  namespace: kube-system
  labels:
    app.kubernetes.io/managed-by: Helm
spec:
  hostnames:
    - hubble-ui.p.lan.starstreak.net
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: https
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: hubble-ui
          port: 80
